# iron-man-models

./: .flake8  .gitignore  README.md  pyproject.toml  query_prediction.sql
docker/: Dockerfile  docker-compose.yml
iron_man_models/: connection.py
iron_man_models/config/: __init__.py
iron_man_models/data_manager/: get_features.py
iron_man_models/data_manager/queries/: map_predictions.sql
iron_man_models/models/: base.py  lgbm_model.py  logistic_regression_model.py  svc_model.py  xgboost_model.py
iron_man_models/training/: train_model.py
results/models/: lgbm.pkl  logreg.pkl
