[tool.poetry]
name = "iron-man-models"
version = "0.1.0"
description = ""
authors = ["Mauro Bernardes de Assis Neto <maurobernardesan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightgbm = "^4.5.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
mlflow = "^2.17.0"
xgboost = "^2.1.2"
cryptography = "^43.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["seu_projeto"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
